--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,4 @@
-{
+﻿{
    "background": {
       "scripts": [ "background.js" ]
    },
@@ -7,11 +7,11 @@
    },
    "content_scripts": [ {
       "js": [ "jquery-1.11.3.min.js", "content.js" ],
-      "matches": [ "http://declarator.org/document/*/section_add/*" ]
+      "matches": [ "https://declarator.org/document/*/section_add/*" ]
    } ],
    "description": "Автоматизированная подстановка данных в форму декларации",
    "manifest_version": 2,
    "name": "Декларатор - заполнялка",
    "permissions": [ "activeTab" ],
-   "version": "1.3"
+   "version": "1.6"
 }
